# python-app-template

./: .flake8  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: deploy-to-aws.yml  test.yml
app/: __init__.py
docker/: Dockerfile  Dockerfile.prod
tests/: test_python_app_template.py
