# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tatsuru Kawatsu <t-kawatsu@jogoj.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
